grafana-ingress.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: traefik
    name: grafana
    namespace: istio-system
  spec:
    rules:
    - host: grafana-demo.doctorondemand.com
      http:
        paths:
        - backend:
            serviceName: grafana
            servicePort: 3000
          path: /
  status:
    loadBalancer: {}
kind: List
