zipkin-ingress.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: traefik
    name: zipkin
    namespace: istio-system
  spec:
    rules:
    - host: zipkin-demo.doctorondemand.com
      http:
        paths:
        - backend:
            serviceName: zipkin
            servicePort: 9411
          path: /
  status:
    loadBalancer: {}
kind: List
